2009-03-26  Sancho Lerena  <slerena@artica.es>

	* pandoradb.sql: SLA now admits float numerical data.
	
	* godmode/menu.php: Adjusted some ACL controls: Reporting (LW), 
	
	* graph_builder.php: Now only shows agents with access, not all.
	TODO:, make a pre-filter with groups.
	
	* reporting_builder.php: Now it's possible to change group after creation,
	SLA supports float numerical data, added a link to quick view of report,
	groups shown only accesable by users. List to choose report only shows 
	reports with access to user ( including private report ), shown also
	in the report list the group, user and private status of a report.

2009-03-25  Sancho Lerena  <slerena@artica.es>

	* index.php, 
	  include/config_process.php: Updated build.

	* general/footer.php: GPL info page is always in english.

	* godmode/agentes/module_manager_editor_network.php: Fixed 
	SNMP Walk issues.

	* godmode/reporting/reporting_builder.php: Notice fix.

	* godmode/reporting/map_builder.php: Fixed problem in group
	editing. This allows to change group after you've a map 
	created and can change it's group so only groups in that 
	group are able to see it.

2009-03-23  Esteban Sanchez  <estebans@artica.es>

	* godmode/db/db_purge.php: Fixed an SQL error.

2009-03-18  Sancho Lerena  <slerena@artica.es>

	* general/footer.php: Fixing the damm problem with Firefox button img.

	* godmode/agentes/module_manager_editor_network.php: Removed SNMP Walk
	because don't work :-(. Needs fix

	* godmode/modules/manage_network_components.php: Support pagination and
	fixed layout.

	* godmode/modules/manage_nc_groups.php: Show items per group and add a 
	direct link to them.

2009-03-16  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/help/en/help_planned_downtime.php,
	  include/help/es/help_planned_downtime.php: Added more information
	  about the scheduled downtime.

2009-03-10  Sancho Lerena  <slerena@artica.es>

	* include/config_process.php: Added charset support for output in PDF, XML